Fixing workflow